fix(ci): use ubuntu-22.04 and add pkg-config deps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,29 +8,27 @@ on:
 
 jobs:
   quality:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./src-tauri
+    runs-on: ubuntu-22.04
     
     steps:
       - uses: actions/checkout@v4
       
       - name: Install system dependencies
-        working-directory: .
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev \
-            libgtk-3-dev \
+            pkg-config \
             libglib2.0-dev \
+            libgtk-3-dev \
+            libwebkit2gtk-4.1-dev \
             build-essential \
             curl \
             wget \
             file \
             libssl-dev \
             libayatana-appindicator3-dev \
-            librsvg2-dev
+            librsvg2-dev \
+            libsoup-3.0-dev
       
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -38,7 +36,9 @@ jobs:
           components: rustfmt, clippy
       
       - name: Check formatting
+        working-directory: ./src-tauri
         run: cargo fmt --all --check
       
       - name: Run clippy
+        working-directory: ./src-tauri
         run: cargo clippy --all-targets -- -D warnings
